crates/shipper-policy/tests/snapshots/snapshot_tests__balanced.snap
---
source: crates/shipper-policy/tests/snapshot_tests.rs
expression: "format!(\"{:?}\", PolicyKind::Balanced)"
---
Balanced
