crates/shipper-policy/tests/snapshots/snapshot_tests__balanced_policy_default_flags.snap
---
source: crates/shipper-policy/tests/snapshot_tests.rs
expression: effects
---
run_dry_run: true
check_ownership: false
strict_ownership: false
readiness_enabled: true
