crates/shipper-policy/tests/snapshots/snapshot_tests__fast.snap
---
source: crates/shipper-policy/tests/snapshot_tests.rs
expression: "format!(\"{:?}\", PolicyKind::Fast)"
---
Fast
