crates/shipper-policy/tests/snapshots/snapshot_tests__fast_policy_default_flags.snap
---
source: crates/shipper-policy/tests/snapshot_tests.rs
expression: effects
---
run_dry_run: false
check_ownership: false
strict_ownership: false
readiness_enabled: false
