crates/shipper-policy/tests/snapshots/snapshot_tests__policy_effects_display_formatting.snap
---
source: crates/shipper-policy/tests/snapshot_tests.rs
expression: "format!(\"{effects:?}\")"
---
"PolicyEffects { run_dry_run: true, check_ownership: true, strict_ownership: false, readiness_enabled: true }"
