crates/shipper-policy/tests/snapshots/snapshot_tests__safe.snap
---
source: crates/shipper-policy/tests/snapshot_tests.rs
expression: "format!(\"{:?}\", PolicyKind::Safe)"
---
Safe
