crates/shipper-policy/tests/snapshots/snapshot_tests__safe_policy_default_flags.snap
---
source: crates/shipper-policy/tests/snapshot_tests.rs
expression: effects
---
run_dry_run: true
check_ownership: true
strict_ownership: true
readiness_enabled: true
