crates/shipper-policy/tests/snapshots/snapshot_tests__safe_policy_no_verify_skips_dry_run.snap
---
source: crates/shipper-policy/tests/snapshot_tests.rs
expression: effects
---
run_dry_run: false
check_ownership: true
strict_ownership: true
readiness_enabled: true
