crates/shipper-policy/tests/snapshots/snapshot_tests__safe_policy_skip_ownership_check.snap
---
source: crates/shipper-policy/tests/snapshot_tests.rs
expression: effects
---
run_dry_run: true
check_ownership: false
strict_ownership: true
readiness_enabled: true
